--- a/src/app/layout/balances/exchange-balance/exchange-balance.component.scss
+++ b/src/app/layout/balances/exchange-balance/exchange-balance.component.scss
@@ -32,3 +32,10 @@
 .hide-balances {
     filter: blur(0.5rem);
 }
+.hide-balances span {
+    //visibility: hidden;
+    display: none;
+}
+.hide-balances:after {
+    content: '*****************';
+}
