--- a/src/app/layout/balances/blockchain-wallet-balance/blockchain-wallet-balance.component.html
+++ b/src/app/layout/balances/blockchain-wallet-balance/blockchain-wallet-balance.component.html
@@ -13,6 +13,9 @@
         </div>
         <div class="card mb-3">
             <div class="card-header">
+                <div *ngIf="isFetchCurrencyBalancesRequestPending" class="progress mb-2">
+                    <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%;"></div>
+                </div>
                 <i class="fa fa-usd" aria-hidden="true"></i>
                 Currency balances of all wallets
             </div>
@@ -51,7 +54,10 @@
         </div>
         <div class="card">
             <div class="card-header">
-                <button (click)="refreshWalletsBalance()" class="btn btn-primary btn-sm">
+                <div *ngIf="isFetchWalletsRequestPending" class="progress mb-2">
+                    <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%;"></div>
+                </div>
+                <button (click)="refreshWalletsBalance()" class="btn btn-primary btn-sm" [disabled]="isFetchWalletsRequestPending">
                     <i class="fa fa-refresh" aria-hidden="true"></i>
                 </button>
                 Your wallets
