--- a/src/app/layout/balances/blockchain-wallet-balance/edit/blockchain-wallet-add.component.html
+++ b/src/app/layout/balances/blockchain-wallet-balance/edit/blockchain-wallet-add.component.html
@@ -4,6 +4,9 @@
         <h5>Add wallets</h5>
         <div class="card mb-3">
             <div class="card-header">
+                <div *ngIf="isRequestPending" class="progress mb-3">
+                    <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%;"></div>
+                </div>
                 <ng-container *ngIf="!isInUpdateMode">
                     <button disabled class="btn btn-sm btn-default">
                         <i class="fa fa-plus-circle" aria-hidden="true"></i>
@@ -77,12 +80,12 @@
                             </ul>
                         </div>
                         <div class="form-group">
-                            <button *ngIf="!isInUpdateMode" class="btn btn-success mr-2" (click)="addWallets()" [disabled]="!areAddWalletsInputValid()">
+                            <button *ngIf="!isInUpdateMode" class="btn btn-success mr-2" (click)="addWallets()" [disabled]="isRequestPending || !areAddWalletsInputValid()">
                                 <i class="fa fa-plus-circle" aria-hidden="true"></i>
                                 <span *ngIf="isAddingMultipleWallets"> Add wallets</span>
                                 <span *ngIf="!isAddingMultipleWallets"> Add wallet</span>
                             </button>
-                            <button *ngIf="isInUpdateMode" class="btn btn-success mr-2" (click)="saveWallet()" [disabled]="!areAddWalletsInputValid()">
+                            <button *ngIf="isInUpdateMode" class="btn btn-success mr-2" (click)="saveWallet()" [disabled]="isRequestPending || !areAddWalletsInputValid()">
                                 <i class="fa fa-floppy-o" aria-hidden="true"></i>
                                 <span> Save wallet</span>
                             </button>
